tests/parser/invalid/invalid_expression.src
fn main() {
    int x = 1 + * 2;  // Ошибка: некорректное выражение
    return x;
}